tests/fail/incomplete_type.has
struct x{
    var a : [x] // ok
    var b : x // incomplete type error
}

function main() : int {
    var foo : x
    return 0
}